src/test/ui/proc-macro/no-macro-use-attr.stderr
warning: unused extern crate
  --> $DIR/no-macro-use-attr.rs:6:1
   |
LL | extern crate test_macros;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove it
   |
note: the lint level is defined here
  --> $DIR/no-macro-use-attr.rs:4:9
   |
LL | #![warn(unused_extern_crates)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: fatal error triggered by #[rustc_error]
  --> $DIR/no-macro-use-attr.rs:10:1
   |
LL | fn main() {}
   | ^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

